--- a/ConsoleDgtData/ConsoleDgtData.csproj
+++ b/ConsoleDgtData/ConsoleDgtData.csproj
@@ -37,6 +37,10 @@
       <HintPath>..\packages\AutoMapper.5.1.1\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FileHelpers, Version=3.1.5.0, Culture=neutral, PublicKeyToken=3e0c08d59cc3d657, processorArchitecture=MSIL">
       <HintPath>..\packages\FileHelpers.3.1.5\lib\net45\FileHelpers.dll</HintPath>
       <Private>True</Private>
@@ -51,11 +55,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\BajaData.cs" />
+    <Compile Include="src\BajaDataOut.cs" />
+    <Compile Include="src\CmOptions.cs" />
+    <Compile Include="src\CodBaja.cs" />
     <Compile Include="src\CodServicio.cs" />
     <Compile Include="src\CodPropulsion.cs" />
     <Compile Include="src\Enums.cs" />
     <Compile Include="src\MatriculacionData.cs" />
-    <Compile Include="src\MatrinculacionDataOut.cs" />
+    <Compile Include="src\MatriculacionDataOut.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
