--- a/ConsoleDgtData/packages.config
+++ b/ConsoleDgtData/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="5.1.1" targetFramework="net46" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net46" />
   <package id="FileHelpers" version="3.1.5" targetFramework="net46" />
 </packages>
