--- a/DgtWsProxyTests/app.config
+++ b/DgtWsProxyTests/app.config
@@ -12,11 +12,27 @@
         </binding>
         <binding name="descargaArchivoMicrodatosSoapBinding1" />
       </basicHttpBinding>
+      <wsHttpBinding>
+        <binding name="descargaArchivoMicrodatosSoapBinding2" >
+          <security mode="Transport" >
+            <message clientCredentialType="Certificate"/>
+          </security>
+        </binding>
+      </wsHttpBinding>
     </bindings>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="igaeBehavior">
+          <clientCredentials >
+            <clientCertificate  storeLocation="CurrentUser" storeName="My" x509FindType="FindByThumbprint" findValue="a1af757082d9680899cb8f96a79d69793467df04" />
+          </clientCredentials>
+        </behavior>
+      </endpointBehaviors>
+    </behaviors>
     <client>
       <endpoint address="https://sedeapl.dgt.gob.es:8080/WS_IEST_COMP/descargaArchivoMicrodatosService"
-          binding="basicHttpBinding" bindingConfiguration="descargaArchivoMicrodatosSoapBinding"
-          contract="dgt.descargaArchivoMicrodatosPortType" name="descargaArchivoMicrodatosSoap" />
+          binding="wsHttpBinding" bindingConfiguration="descargaArchivoMicrodatosSoapBinding2"
+          contract="dgt.descargaArchivoMicrodatosPortType" name="descargaArchivoMicrodatosSoap"  behaviorConfiguration="igaeBehavior"/>
     </client>
     <diagnostics>
       <messageLogging
@@ -41,11 +57,11 @@
   <system.diagnostics>
     <trace autoflush="true" />
     <sources>
-      <source name="System.ServiceModel" switchValue="Verbose, ActivityTracing" propagateActivity="true">
+      <!--<source name="System.ServiceModel" switchValue="Verbose, ActivityTracing" propagateActivity="true">
         <listeners>
           <add name="nlog" type="NLog.NLogTraceListener, NLog" />
         </listeners>
-      </source>
+      </source>-->
       <source name="System.ServiceModel.MessageLogging">
         <listeners>
           <add name="nlog" type="NLog.NLogTraceListener, NLog" />
@@ -53,5 +69,4 @@
       </source>
     </sources>
   </system.diagnostics>
-
 </configuration>
