--- a/ConsoleDgtData/packages.config
+++ b/ConsoleDgtData/packages.config
@@ -3,4 +3,5 @@
   <package id="AutoMapper" version="5.1.1" targetFramework="net46" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net46" />
   <package id="FileHelpers" version="3.1.5" targetFramework="net46" />
+  <package id="NLog" version="4.3.9" targetFramework="net46" />
 </packages>
