consula a WS ok

--- a/DgtWsProxyTests/app.config
+++ b/DgtWsProxyTests/app.config
@@ -13,14 +13,14 @@
         <binding name="descargaArchivoMicrodatosSoapBinding1" />
       </basicHttpBinding>
       <wsHttpBinding>
-        <binding name="descargaArchivoMicrodatosSoapBinding2" >
+        <binding name="descargaArchivoMicrodatosSoapBinding2"  >
           <security mode="Transport" >
             <message clientCredentialType="Certificate"/>
           </security>
         </binding>
       </wsHttpBinding>
       <customBinding>
-        <binding name="igaeCustomBinding">
+        <binding name="igaeCustomBinding"  >
           <security authenticationMode="MutualCertificate"
                     includeTimestamp="false"
                     allowInsecureTransport="true"
@@ -30,7 +30,9 @@
             <localClientSettings detectReplays="false"/>
           </security>
           <textMessageEncoding messageVersion="Soap11"  />
-          <httpsTransport  />
+          <httpsTransport maxReceivedMessageSize="2097152"
+                        maxBufferSize="2097152"
+                        maxBufferPoolSize="2097152"  />
         </binding>
       </customBinding>
     </bindings>
@@ -38,7 +40,7 @@
       <endpointBehaviors>
         <behavior name="igaeBehavior">
           <clientCredentials >
-            <clientCertificate  storeLocation="CurrentUser" storeName="My" x509FindType="FindByThumbprint" findValue="6F8DF57BD1D5CBE2E584A3B8748C1D0F79D1A853" />          
+            <clientCertificate  storeLocation="CurrentUser" storeName="My" x509FindType="FindByThumbprint" findValue="abc8fdc20eae617e3da52179d962cc46041d3109" />          
           <serviceCertificate>
             <defaultCertificate storeLocation="CurrentUser" storeName="AddressBook" x509FindType="FindByThumbprint" findValue="814e6fc95c9c779c46bb34882e04d54cd28684ad"/>
           </serviceCertificate>
@@ -49,7 +51,7 @@
     <client>
       <endpoint address="https://sedeapl.dgt.gob.es:8080/WS_IEST_COMP/descargaArchivoMicrodatosService"
           binding="customBinding" bindingConfiguration="igaeCustomBinding"
-          contract="dgt.descargaArchivoMicrodatosPortType" name="descargaArchivoMicrodatosSoap"  behaviorConfiguration="igaeBehavior">
+          contract="dgt.descargaArchivoMicrodatosPortType" name="descargaArchivoMicrodatosSoap"  behaviorConfiguration="igaeBehavior" >
         <identity>
           <dns value="*.dgt.gob.es"/>
         </identity>
@@ -68,7 +70,7 @@
 
   <nlog>
     <targets>
-      <target name="file" type="File" fileName="D:\tmp\log\DGT_${shortdate}.log"
+      <target name="file" type="File" fileName="F:\tmp\log\DGT_${shortdate}.log"
               layout="${longdate} ${uppercase:${level}}  || Call site: ${callsite:className=true:methodName=true} ||  ${message} ${exception:format=toString}" />
     </targets>
     <rules>
