--- a/DgtWsProxy/packages.config
+++ b/DgtWsProxy/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetZip" version="1.10.1" targetFramework="net46" />
   <package id="NLog" version="4.3.9" targetFramework="net46" />
 </packages>
