Persistencia en BBDD, en proceso

--- a/DgtWsProxy/app.config
+++ b/DgtWsProxy/app.config
@@ -1,9 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
@@ -14,25 +15,15 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://sedeapl.dgt.gob.es:8080/WS_IEST_COMP/descargaArchivoMicrodatosService"
-          binding="basicHttpBinding" bindingConfiguration="descargaArchivoMicrodatosSoapBinding"
-          contract="dgt.descargaArchivoMicrodatosPortType" name="descargaArchivoMicrodatosSoap" />
+      <endpoint address="https://sedeapl.dgt.gob.es:8080/WS_IEST_COMP/descargaArchivoMicrodatosService" binding="basicHttpBinding" bindingConfiguration="descargaArchivoMicrodatosSoapBinding" contract="dgt.descargaArchivoMicrodatosPortType" name="descargaArchivoMicrodatosSoap" />
     </client>
     <diagnostics>
-      <messageLogging
-           logEntireMessage="true"
-           logMalformedMessages="true"
-           logMessagesAtServiceLevel="false"
-           logMessagesAtTransportLevel="true"
-           maxMessagesToLog="2147483647"
-           maxSizeOfMessageToLog="2147483647" logKnownPii="true"/>
+      <messageLogging logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="false" logMessagesAtTransportLevel="true" maxMessagesToLog="2147483647" maxSizeOfMessageToLog="2147483647" logKnownPii="true" />
     </diagnostics>
   </system.serviceModel>
-
   <nlog>
     <targets>
-      <target name="file" type="File" fileName="D:\tmp\log\DGT_${shortdate}.log"
-              layout="${longdate} ${uppercase:${level}}  || Call site: ${callsite:className=true:methodName=true} ||  ${message} ${exception:format=toString}" />
+      <target name="file" type="File" fileName="D:\tmp\log\DGT_${shortdate}.log" layout="${longdate} ${uppercase:${level}}  || Call site: ${callsite:className=true:methodName=true} ||  ${message} ${exception:format=toString}" />
     </targets>
     <rules>
       <logger name="*" minlevel="Trace" writeTo="file" />
@@ -53,5 +44,14 @@
       </source>
     </sources>
   </system.diagnostics>
-
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
