--- a/ConsoleDgtData/ConsoleDgtData.csproj
+++ b/ConsoleDgtData/ConsoleDgtData.csproj
@@ -41,6 +41,14 @@
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FileHelpers, Version=3.1.5.0, Culture=neutral, PublicKeyToken=3e0c08d59cc3d657, processorArchitecture=MSIL">
       <HintPath>..\packages\FileHelpers.3.1.5\lib\net45\FileHelpers.dll</HintPath>
       <Private>True</Private>
@@ -50,6 +58,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -65,11 +74,13 @@
     <Compile Include="src\CodBaja.cs" />
     <Compile Include="src\CodServicio.cs" />
     <Compile Include="src\CodPropulsion.cs" />
+    <Compile Include="src\DAL\RegistroDgtContext.cs" />
     <Compile Include="src\Enums.cs" />
     <Compile Include="src\MatriculacionData.cs" />
     <Compile Include="src\MatriculacionDataOut.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\VehicleData.cs" />
     <Compile Include="src\VehicInputData.cs" />
     <Compile Include="src\VehicOutputData.cs" />
   </ItemGroup>
