--- a/DgtWsProxy/packages.config
+++ b/DgtWsProxy/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotNetZip" version="1.10.1" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="NLog" version="4.3.9" targetFramework="net46" />
 </packages>
