--- a/DgtWsProxyTests/app.config
+++ b/DgtWsProxyTests/app.config
@@ -4,7 +4,8 @@
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
 
   <system.serviceModel>
     <bindings>
@@ -85,6 +86,11 @@
     <add name="RegistroDgtContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=DGTPE;Integrated Security=SSPI;" />
   </connectionStrings>
   <entityFramework>
+    <contexts>
+      <context type="ConsoleDgtData.DAL.RegistroDgtContext, ConsoleDgtData">
+        <databaseInitializer type="ConsoleDgtData.DAL.RegistroDgtInitializer, ConsoleDgtData" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
