--- a/ConsoleDgtData/packages.config
+++ b/ConsoleDgtData/packages.config
@@ -3,6 +3,8 @@
   <package id="AutoMapper" version="5.1.1" targetFramework="net46" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.BulkInsert-ef6" version="6.0.2.8" targetFramework="net46" />
+  <package id="EntityFramework.MappingAPI" version="6.0.0.7" targetFramework="net46" />
   <package id="FileHelpers" version="3.1.5" targetFramework="net46" />
   <package id="NLog" version="4.3.9" targetFramework="net46" />
 </packages>
