--- a/DgtWsProxy/packages.config
+++ b/DgtWsProxy/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="DotNetZip" version="1.10.1" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.BulkInsert-ef6" version="6.0.2.8" targetFramework="net46" />
+  <package id="EntityFramework.MappingAPI" version="6.0.0.7" targetFramework="net46" />
   <package id="NLog" version="4.3.9" targetFramework="net46" />
 </packages>
