--- a/DgtWsProxyTests/packages.config
+++ b/DgtWsProxyTests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.BulkInsert-ef6" version="6.0.2.8" targetFramework="net46" />
+  <package id="EntityFramework.MappingAPI" version="6.0.0.7" targetFramework="net46" />
   <package id="NLog" version="4.3.9" targetFramework="net46" />
 </packages>
