Proyecto de DDBB

--- a/DgtWsProxyTests/app.config
+++ b/DgtWsProxyTests/app.config
@@ -58,7 +58,7 @@
 
   <nlog>
     <targets>
-      <target name="file" type="File" fileName="F:\tmp\log\DGT_${shortdate}.log" layout="${longdate} ${uppercase:${level}}  || Call site: ${callsite:className=true:methodName=true} ||  ${message} ${exception:format=toString}" />
+      <target name="file" type="File" fileName="D:\tmp\log\DGT_${shortdate}.log" layout="${longdate} ${uppercase:${level}}  || Call site: ${callsite:className=true:methodName=true} ||  ${message} ${exception:format=toString}" />
     </targets>
     <rules>
       <logger name="*" minlevel="Trace" writeTo="file" />
