--- a/ConsoleDgtClient/App.config
+++ b/ConsoleDgtClient/App.config
@@ -3,9 +3,21 @@
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
+  
+    <startup> 
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+    </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework.MappingAPI" publicKeyToken="7ee2e825d201459e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.1.0.9" newVersion="6.1.0.9" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+
+
 
   <system.serviceModel>
     <bindings>
@@ -51,9 +63,9 @@
         </identity>
       </endpoint>
     </client>
-    <diagnostics>
+    <!--<diagnostics>
       <messageLogging logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="false" logMessagesAtTransportLevel="true" maxMessagesToLog="2147483647" maxSizeOfMessageToLog="2147483647" logKnownPii="true" />
-    </diagnostics>
+    </diagnostics>-->
   </system.serviceModel>
 
   <nlog>
@@ -79,57 +91,4 @@
       </source>
     </sources>
   </system.diagnostics>
-
-
-
-  <connectionStrings>
-    <add name="RegistroDgtContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=DGTPE;Integrated Security=SSPI;" />
-  </connectionStrings>
-  <entityFramework>
-    <contexts>
-      <context type="ConsoleDgtData.DAL.RegistroDgtContext, ConsoleDgtData">
-        <databaseInitializer type="ConsoleDgtData.DAL.RegistroDgtInitializer, ConsoleDgtData" />
-      </context>
-    </contexts>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
-
-
-
-  <runtime>
-
-
-
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-
-
-
-      <dependentAssembly>
-
-
-
-        <assemblyIdentity name="EntityFramework.MappingAPI" publicKeyToken="7ee2e825d201459e" culture="neutral" />
-
-
-
-        <bindingRedirect oldVersion="0.0.0.0-6.1.0.9" newVersion="6.1.0.9" />
-
-
-
-      </dependentAssembly>
-
-
-
-    </assemblyBinding>
-
-
-
-  </runtime>
 </configuration>
