--- a/ConsoleDgtData/App.config
+++ b/ConsoleDgtData/App.config
@@ -22,4 +22,12 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework.MappingAPI" publicKeyToken="7ee2e825d201459e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.1.0.9" newVersion="6.1.0.9" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
